5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4178/executions/1667_2324.log
== TEST (2019-04-16 16:07:17) 
-- CODE:
var1 = input("Nome: ")
xx = 10.7654/0.3479

if var1 == "MINERVA":
	print(xx)
-- OUTPUT:
DIGITE O NOME DO BRUXO: 30.943949410750214
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:10) 
-- CODE:
var1 = input("Nome: ")
xx = 10.7654/0.3479
XX2 = 10.674/1.789

if var1 == "MINERVA":
	print(xx)
else:
	print(xx2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(xx2)
NameError: name 'xx2' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:08:34) 
-- CODE:
var1 = input("Nome: ")
xx = 10.7654/0.3479
xx2 = 10.674/1.789

if var1 == "MINERVA":
	print(xx)
else:
	print(xx2)
-- OUTPUT:
5.966461710452767
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:08:39) 
-- CODE:
var1 = input("Nome: ")
xx = 10.7654/0.3479
xx2 = 10.674/1.789

if var1 == "MINERVA":
	print(xx)
else:
	print(xx2)
-- EXECUTION TIME:
0.147146
-- TEST CASE 1:
---- input:
BELATRIX
---- correct output:
5.966461710452767
---- user output:
5.966461710452767
-- TEST CASE 2:
---- input:
MINERVA
---- correct output:
30.943949410750214
---- user output:
30.943949410750214
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
